@@ -1,8 +1,10 @@
-README - 12/17/2003
+README - 12/18/2003
 -------------------
 
 CHANGES IN Mini-XML 1.3
 
+	- Fixes for mxmldoc.
+	- Added support for reading standard HTML entity names.
 	- mxmlLoadString/File() did not decode character
 	  entities in attribute names or values.
 	- mxmlLoadString/File() would crash when loading non-
